--- a/Chat-Bot.ipynb
+++ b/Chat-Bot.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import the required Packages ##"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -31,7 +38,14 @@
    "outputs": [],
    "source": [
     "import nltk\n",
-    "nltk.download('punkt')"
+    "nltk.download('punkt') #"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read the content.json file that consists of the training data for the bot ##"
    ]
   },
   {
@@ -41,7 +55,7 @@
    "outputs": [],
    "source": [
     "with open(\"content.json\") as file:\n",
-    "    data = json.load(file)"
+    "    data = json.load(file) #You can edit the file as required or according to what you want your bot to do :D"
    ]
   },
   {
@@ -63,6 +77,13 @@
     "labels = []\n",
     "docs_x = []\n",
     "docs_y = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Converting data into list and pre-processing of the data ##"
    ]
   },
   {
@@ -120,6 +141,13 @@
    "outputs": [],
    "source": [
     "tensorflow.reset_default_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training your Bot ##"
    ]
   },
   {
@@ -182,6 +210,13 @@
     "            \n",
     "        \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test your Bot :D ##"
    ]
   },
   {
